Fixed course-basicinfo to have overflow hidden, so that the ucas link panel is pushed down Added a show minimal toggle to hide sections of the page that will not be displayed if there is no "about this training programme"

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -147,6 +147,7 @@ dd > details, dd > details[open] {
 .course-basicinfo {
     margin-top: 30px;
     margin-bottom: 30px;
+    overflow: hidden;
 }
 .course-basicinfo dl dt {
     width: 25%;
